packages/libs/error-stack/tests/snapshots/test_debug__hook_defer@backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

u64
| @ tests/test_debug.rs:306:10
|-> Root error
|   > @ tests/common.rs:140:5
|-> u16
|   > @ tests/test_debug.rs:307:10
|-> u32
|   > @ tests/test_debug.rs:305:10
\-> backtrace with 35 frames (1)
    > @ tests/common.rs:140:5

