packages/libs/error-stack/tests/snapshots/test_debug__hook_stack@spantrace-backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

unsigned 64-bit integer
| @ tests/test_debug.rs:272:47
|-> unsigned 32bit integer
|   \-@ tests/test_debug.rs:272:34
|-> Root error
|   \-@ tests/common.rs:140:5
|-> spantrace with 2 frames (1)
|   \-@ tests/common.rs:140:5
\-> backtrace with 41 frames (1)
    \-@ tests/common.rs:140:5

